count of videos

--- a/video_library/templates/generators/video_category.html
+++ b/video_library/templates/generators/video_category.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block page_content %}
-<h4 class="title"> <span class="octicon octicon-device-camera-video" ></span> {{title}} {{ _("Video Library") }}</h4>
+<h4 class="title"> <span class="octicon octicon-device-camera-video" ></span> {{title}} {{ _("Video Library") }} #{{total_video_count}}</h4>
 
 {% if featured_video_data %}
   <div class="row">
