--- a/video_library/templates/generators/video_category.html
+++ b/video_library/templates/generators/video_category.html
@@ -1,5 +1,5 @@
 {% extends "video_library/templates/video_web.html" %}
-{% block title %}{{ _("Premium Video Library") }}{% endblock %}
+{% block title %}{{title}} {{ _("Video Library") }}{% endblock %}
 {% block header %}
 
 {% endblock %}
