--- a/video_library/templates/generators/video_category.css
+++ b/video_library/templates/generators/video_category.css
@@ -1,4 +1,8 @@
-    .page-container{
+    @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,500i,700,700i,900');
+	body, p, h1, h2, h3, h4, h5, h6, div, span, a, ul, li, ol{
+		font-family: 'Roboto', sans-serif;
+	}
+	.page-container{
         max-width:none;
     }
     .premium_video{
@@ -23,33 +27,63 @@
         padding:0 5px;
     }*/
             h4.title{
-                    padding: 4px 0px;
-                    color: #000;
-                    border-radius: 5px;
-                    font-size: 18px;
-                    font-weight: 600;
-                    margin: 0;
-                    margin-bottom:10px;
+				font-size: 22px;
+				border-bottom: 2px solid #e8ebed;
+				position: relative;
+				margin-bottom: 25px;
+				margin-top: 0;
+				text-transform: uppercase;
+				font-weight: bold;
+				color: #43494e;
+				line-height: 1;
+				padding-bottom: 13px;
+				z-index: -1;
             }
+			 h4.title:after{
+				position: relative;
+				height: 2px;
+				background: #4aa3df;
+				width: 80px;
+				content: '';
+				left: 0;
+				bottom: -15px;
+				display: block;
+			}
             h4.title span{
                     padding-right: 11px;
-                    font-size: 22px;
+                    font-size: 28px;
             }
+			h4.title  span.sml{
+				padding-right: 0px;
+                    font-size: 20px;
+					text-transform:none;
+					padding-top:0px;
+					font-weight: normal;
+			}
+			.page-head .page-search-block{
+				overflow: auto;
+				margin-top: -50px;
+				z-index: 9;
+			}
     .premium_video .col-md-3 p{
         margin-top:0;
         text-align: center;
     }		
             h5.subtitle{
-                    font-size: 17px;
+                    font-size: 28px;
                     line-height: 28px;
                     margin: 0;
-                    padding: 5px 0;
-               display: inline-block;
+                    padding: 0 0 5px 0;
+               display: block;
             }
+			h5.subtitle img{
+				max-width:50px;
+			}
             h5.subtitle span{
                     font-size: 20px;
                     padding-right: 7px;
             }
+			
             .table > tbody > tr > td{
                     border:none;
             }
@@ -77,7 +111,8 @@
                 font-family: 'Glyphicons Halflings';  
                 content: "\e114";   
                 float: right;        
-                color: grey;         
+                color: grey;
+				padding-top: 18px;         
             }
             .panel-heading .accordion-toggle.collapsed:after {
                 content: "\e080";    
@@ -94,4 +129,83 @@
                         width: 3%;
                         opacity: .8;
             }
-            a.accordion-toggle{display:block;}
+            a.accordion-toggle{display:block; text-decoration: none; }
+			.feature-block{
+				border:1px solid #ddd;
+				padding:10px;
+			}
+			.video_post {
+				padding: 15px;
+			}
+			.video_post .inner {
+				box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.09);
+				background: #fff;
+				border-bottom: 0;
+				transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+			}
+			.m0 {
+				margin: 0;
+			}
+			.video_post .inner .screencast {
+				position: relative;
+			}
+			.video_post .inner .screencast iframe{
+				max-width: 100%;
+			}
+			.video_post .inner .post_data {
+				padding: 12px 15px;
+				padding-bottom: 25px;
+			}
+			.video_post .inner .post_data .category, .video_post .inner .post_data .views {
+				display: block;
+			}
+			.video_post .inner .post_data .category , .video_post .inner .post_data .views  {
+				color: #43494e;
+				font-size: 12px;
+				font-weight: 600;
+				display: block;
+				padding: 10px 0px;
+				white-space: nowrap;
+				transition: all 300ms ease-in-out 0s;
+			}
+			.video_post .inner .post_data .category  img, .video_post .inner .post_data .views  img {
+				margin-right: 5px;
+			}
+			.video_post .inner .post_data .post_title {
+				font-weight: 600;
+				line-height: 22px;
+				color: #43494e;
+			}
+			.video_post .inner .post_data .post_title {
+				font-size: 20px;
+				display: block;
+				padding-bottom: 0px;
+    			min-height: 44px;
+			}
+			.video_post .inner:hover .post_data .post_title {
+				color: #4aa3df;
+			}
+			.video_post .inner:hover, .video_post .inner:focus {
+    -webkit-transform: translate(0, -8px);
+    -moz-transform: translate(0, -8px);
+    -ms-transform: translate(0, -8px);
+    -o-transform: translate(0, -8px);
+    transform: translate(0, -8px);
+    box-shadow: 0 15px 40px rgba(0, 0, 0, 0.16);
+}
+.panel-group{
+	margin-top:15px;
+}
+.panel-default > .panel-heading{
+	    padding: 0 6px 0 0;
+}
+.item-group-nav-buttons a.pagingbtn{
+	color:#4aa3df;
+	font-size:26px;
+	padding:0;
+	line-height:28px;
+}/*
+.item-group-nav-buttons a.pagingbtn:hover{
+	background-color:#4aa3df;
+	color:#fff;
+}*/
