--- a/video_library/templates/generators/video_category.html
+++ b/video_library/templates/generators/video_category.html
@@ -4,53 +4,136 @@
 
 {% endblock %}
 {% block style %}
+    <link rel="stylesheet" type="text/css" href="./files/slick.css"/>
+	<link rel="stylesheet" type="text/css" href="./files/slick-theme.css"/>
 	<style>
 		{% include "video_library/templates/generators/video_category.css" %}
 	</style>
 {% endblock %}
 
 {% block page_content %}
-<h4 class="title"> <span class="octicon octicon-device-camera-video" ></span> {{title}} {{ _("Video Library") }} #{{total_video_count}}</h4>
+<h4 class="title"> <span class="octicon octicon-device-camera-video" ></span> {{title}} {{ _("Video Library") }}  <span class="pull-right sml"><img src="files/tag_938952.png" style="max-width:50px;" /> exclusive #{{total_video_count}} Videos</span></h4>
+
 
 {% if featured_video_data %}
-  <div class="row">
-      <div class="col-md-12">{{ _("Featured Video") }}</div>
-    </div>
-<div class="row">
+<div class="feature-block">
+  <h5 class="subtitle"> <img src="files/noun_417865.png" /> {{ _("Featured Video") }}</h5>
+    
+<div class="row m0 slick_slider">
     {% for video in featured_video_data %}
-    <div class="col-md-3"> {{video.vimeo}} <p class="video_title"> {{video.course}}>{{video.video}} </p></div> 
+    <div class=" col-md-3 video_post" > 
+    	<div class="inner row m0"> 
+        	<div class="row screencast m0">{{video.vimeo}} </div> 
+            <div class="row m0 post_data">
+            	<div class="category"><img src="files/catagory.png" alt="">{{video.course}}</div>
+                <div class="row m0"><span class="post_title">{{video.video}}</span></div>
+                
+            </div>
+        </div> 
+    </div> 
     {% endfor %}
+</div>
 </div>
 {% endif %}
 
 <div>
+	 <div class="panel-group" id="accordion">
     {%set group = {'count': 0} %}
+    {%set collaped = {'count': 0} %}
     {% for video in video_data %}
     {% if loop.changed(video.course) %}
     {% if group.update({'count': group.count+1}) %} {% endif %}
-  <div class="row">
-    <div class="col-md-12">{{video.course}}</div>
-    {{frappe.form_dict.start|int}}{{group.count}}
-  </div>
-  <div class="row">
-    {% endif %}
-    <div class="col-md-3"><p class="video_title">{{video.video}} </p> {{video.vimeo}} </div>   
-  {% if loop.nextitem is defined and loop.nextitem.course != video.course %}
-  </div>
-  {% endif %}
+    {% if collaped.update({'count': collaped.count+1}) %} {% endif %}
+   			 <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h4 class="panel-title">
+                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#abc{{collaped.count}}">
+                        <img src="files/video_717537.png" style="max-width:50px;" /> {{video.course}}  <span><img src="files/tag_938952.png" style="max-width:30px;" />{{frappe.form_dict.start|int}}{{group.count}}</span>
+                    </a>
+                    
+                  </h4>
+                </div>  
+  				<div id="abc{{collaped.count}}" class="panel-collapse collapse {% if collaped.count == 1 %} in {% endif %}">
+                  <div class="panel-body">
+                      <div class="row">
+                        {% endif %}
+                        <div class=" col-md-3 video_post" > 
+                            <div class="inner row m0"> 
+                                <div class="row screencast m0">{{video.vimeo}} </div> 
+                                <div class="row m0 post_data">
+                                    <div class="row m0"><span class="post_title">{{video.video}}</span></div>
+                                    
+                                </div>
+                            </div> 
+                        </div> 
+                  {% if loop.nextitem is defined and loop.nextitem.course != video.course %}
+                  </div>
+                  </div>
+              		</div>
+                    </div>
+                  {% endif %}
+            
   {% endfor %}
+  
+ </div>  
 </div>
 
+
+</div>
+
+</div>
 <div class="text-center item-group-nav-buttons">
     {% if frappe.form_dict.start|int > 0 %}
-    <a class="btn btn-default" href="/{{ pathname }}?start={{ frappe.form_dict.start|int - page_length }}">{{ _("Prev") }}</a>
+    <a class="btn  pagingbtn" href="/{{ pathname }}?start={{ frappe.form_dict.start|int - page_length }}"><i class="fa fa-arrow-circle-left"></i></a>
     {% endif %}
     {% if video_data|length > page_length %}
     {% endif %}
     {% if show_next|int ==1 %}
-    <a class="btn btn-default" href="/{{ pathname }}?start={{ frappe.form_dict.start|int + page_length}}">{{ _("Next") }}</a>
+    <a class="btn  pagingbtn" href="/{{ pathname }}?start={{ frappe.form_dict.start|int + page_length}}"><i class="fa fa-arrow-circle-right"></i></a>
     {% endif %}
 </div>
 
+
+{% block javascript %}
+<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.js"></script>
+<script type="text/javascript">
+    $(document).ready(function(){
+		$('.slick_slider').slick({
+		  dots: false,
+		  infinite: false,
+		  speed: 300,
+		  slidesToShow: 4,
+		  slidesToScroll: 1,
+		  responsive: [
+			{
+			  breakpoint: 1024,
+			  settings: {
+				slidesToShow: 3,
+				slidesToScroll: 3,
+				infinite: false,
+				dots: false
+			  }
+			},
+			{
+			  breakpoint: 600,
+			  settings: {
+				slidesToShow: 2,
+				slidesToScroll: 2
+			  }
+			},
+			{
+			  breakpoint: 480,
+			  settings: {
+				slidesToShow: 1,
+				slidesToScroll: 1
+			  }
+			}
+		  ]
+		});
+	});
+</script>
+{% endblock %}
 
 {% endblock %}
