--- a/video_library/templates/generators/video_category.html
+++ b/video_library/templates/generators/video_category.html
@@ -12,6 +12,7 @@
 {% endblock %}
 
 {% block page_content %}
+<script>{% include "video_library/public/js/video_category.js" %}</script>
 <h4 class="title"> <span class="octicon octicon-device-camera-video" ></span> {{title}} {{ _("Video Library") }}  <span class="pull-right sml"><img src="files/tag_938952.png" style="max-width:50px;" /> exclusive #{{total_video_count}} Videos</span></h4>
 
 
