--- a/video_library/templates/includes/video_search_box.html
+++ b/video_library/templates/includes/video_search_box.html
@@ -37,3 +37,7 @@ frappe.ready(function() {
 	$(".form-search").on("submit", function() { return false; });
 });
 </script>
+<style>
+#page-video_product_search .page-head .page-search-block{ margin-top: 0px !important; }
+.product-search-content .alert-warning{ background-color:#4aa3df; color:#000; border-color:#4aa3df;}
+</style>
