--- a/video_library/templates/generators/video_category.css
+++ b/video_library/templates/generators/video_category.css
@@ -28,34 +28,25 @@
     }*/
             h4.title{
 				font-size: 22px;
-				border-bottom: 2px solid #e8ebed;
+				border-bottom: 0px solid #e8ebed;
 				position: relative;
-				margin-bottom: 25px;
+				margin-bottom: 0px;
 				margin-top: 0;
 				text-transform: uppercase;
 				font-weight: bold;
 				color: #43494e;
 				line-height: 1;
-				padding-bottom: 13px;
-				z-index: -1;
+				padding-bottom: 3px;
+				z-index: 2;
             }
-			 h4.title:after{
-				position: relative;
-				height: 2px;
-				background: #4aa3df;
-				width: 80px;
-				content: '';
-				left: 0;
-				bottom: -15px;
-				display: block;
-			}
+			
             h4.title span{
                     padding-right: 11px;
                     font-size: 28px;
             }
 			h4.title  span.sml{
 				padding-right: 0px;
-                    font-size: 20px;
+                    font-size: 18px;
 					text-transform:none;
 					padding-top:0px;
 					font-weight: normal;
@@ -133,6 +124,9 @@
 			.feature-block{
 				border:1px solid #ddd;
 				padding:10px;
+				    padding-top: 0;
+					position: relative;
+    max-width: 100%;
 			}
 			.video_post {
 				padding: 15px;
@@ -143,6 +137,9 @@
 				border-bottom: 0;
 				transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
 			}
+			.panel-title {
+				font-weight: 500;
+			}
 			.m0 {
 				margin: 0;
 			}
@@ -151,6 +148,7 @@
 			}
 			.video_post .inner .screencast iframe{
 				max-width: 100%;
+				width: 100%;
 			}
 			.video_post .inner .post_data {
 				padding: 12px 15px;
@@ -209,3 +207,22 @@
 	background-color:#4aa3df;
 	color:#fff;
 }*/
+
+
+@media (max-width: 767px) {
+	h4.title span.sml{
+		    float: none !important;
+		display: block;
+		text-align: right;
+	}
+	.video_post .inner .screencast iframe {
+    max-width: 100%;
+    width: 100%;
+}
+.panel-title a{ position:relative;}
+.panel-heading a.accordion-toggle:after{
+	position: absolute;
+    top: 0;
+    right: 0;
+	}
+}
