--- a/video_library/templates/generators/video_category.html
+++ b/video_library/templates/generators/video_category.html
@@ -4,8 +4,8 @@
 
 {% endblock %}
 {% block style %}
-    <link rel="stylesheet" type="text/css" href="./files/slick.css"/>
-	<link rel="stylesheet" type="text/css" href="./files/slick-theme.css"/>
+    <link rel="stylesheet" type="text/css" href="files/owl.carousel.css"/>
+    <link rel="stylesheet" type="text/css" href="files/owl.theme.css"/>
 	<style>
 		{% include "video_library/templates/generators/video_category.css" %}
 	</style>
@@ -13,18 +13,18 @@
 
 {% block page_content %}
 <script>{% include "video_library/public/js/video_category.js" %}</script>
-<h4 class="title"> <span class="octicon octicon-device-camera-video" ></span> {{title}} {{ _("Video Library") }}  <span class="pull-right sml"><img src="files/tag_938952.png" style="max-width:50px;" /> exclusive #{{total_video_count}} Videos</span></h4>
+<h4 class="title"> <img src="files/nounlesson_717537.png" style="max-width:50px;" /> {{title}} {{ _("Video Library") }}  <span class="pull-right sml"><img src="files/tag_938952.png" style="max-width:40px;" /> exclusive #{{total_video_count}} videos</span></h4>
 
 
 {% if featured_video_data %}
-<div class="feature-block">
+<div class="feature-block" style="max-width:100%; overflow:hidden;">
   <h5 class="subtitle"> <img src="files/noun_417865.png" /> {{ _("Featured Video") }}</h5>
     
-<div class="row m0 slick_slider">
+<div class=" m0 slick_slider" id="slick_slider">
     {% for video in featured_video_data %}
-    <div class=" col-md-3 video_post" > 
+    <div class="  video_post" > 
     	<div class="inner row m0"> 
-        	<div class="row screencast m0">{{video.vimeo}} </div> 
+        		<div class="row screencast m0">{{video.vimeo}} </div> 
             <div class="row m0 post_data">
             	<div class="category"><img src="files/catagory.png" alt="">{{video.course}}</div>
                 <div class="row m0"><span class="post_title">{{video.video}}</span></div>
@@ -49,9 +49,8 @@
                 <div class="panel-heading">
                   <h4 class="panel-title">
                     <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#abc{{collaped.count}}">
-                        <img src="files/video_717537.png" style="max-width:50px;" /> {{video.course}}  <span><img src="files/tag_938952.png" style="max-width:30px;" />{{frappe.form_dict.start|int}}{{group.count}}</span>
+                        <img src="files/menu_110138.png" style="max-width:50px;" /> {{video.course}}  <span></span>
                     </a>
-                    
                   </h4>
                 </div>  
   				<div id="abc{{collaped.count}}" class="panel-collapse collapse {% if collaped.count == 1 %} in {% endif %}">
@@ -96,45 +95,6 @@
 
 
 {% block javascript %}
-<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.js"></script>
-<script type="text/javascript">
-    $(document).ready(function(){
-		$('.slick_slider').slick({
-		  dots: false,
-		  infinite: false,
-		  speed: 300,
-		  slidesToShow: 4,
-		  slidesToScroll: 1,
-		  responsive: [
-			{
-			  breakpoint: 1024,
-			  settings: {
-				slidesToShow: 3,
-				slidesToScroll: 3,
-				infinite: false,
-				dots: false
-			  }
-			},
-			{
-			  breakpoint: 600,
-			  settings: {
-				slidesToShow: 2,
-				slidesToScroll: 2
-			  }
-			},
-			{
-			  breakpoint: 480,
-			  settings: {
-				slidesToShow: 1,
-				slidesToScroll: 1
-			  }
-			}
-		  ]
-		});
-	});
-</script>
 {% endblock %}
 
 {% endblock %}
