--- a/video_library/templates/video_web.html
+++ b/video_library/templates/video_web.html
@@ -1,6 +1,11 @@
 {% extends base_template_path %}
 
 {% block hero %}{% endblock %}
+{% block style %}
+	<style>
+		{% include "video_library/public/css/video_web.css" %}
+	</style>
+{% endblock %}
 {% block content %}
 <div class="page-container" id="page-{{ name or route }}"
 	data-path="{{ pathname }}"
