--- a/video_library/templates/generators/video_category.html
+++ b/video_library/templates/generators/video_category.html
@@ -12,6 +12,7 @@
 {% endblock %}
 
 {% block page_content %}
+<div class="container">
 <h4 class="title"> <img src="/assets/video_library/image/nounlesson_717537.png" style="max-width:50px;" /> {{title}} {{ _("Video Library") }}  <span class="pull-right sml"><img src="/assets/video_library/image/tag_938952.png" style="max-width:40px;" /> exclusive #{{total_video_count}} videos</span></h4>
 
 
@@ -92,8 +93,5 @@
     {% endif %}
 </div>
 
-
-{% block javascript %}
-{% endblock %}
-
+</div>
 {% endblock %}
