--- a/video_library/templates/includes/video_search_box.html
+++ b/video_library/templates/includes/video_search_box.html
@@ -1,8 +1,7 @@
 <div class="item-search text-muted pull-right">
 	<div class='input-wrapper'>
-		<input type="text" class="item-search-input"
-                        placeholder="{{ _("Search") }}" autocomplete="off">
-		<i class="octicon octicon-search pull-right" style='cursor: pointer;'></i>
+		<input type="text" class="item-search-input" placeholder="{{ _("Search") }}" autocomplete="off">
+		<i class="octicon octicon-search pull-right" style="cursor: pointer;"></i>
 	</div>
 </div>
 <div class="clearfix pull-right" style="width:100%;">
