--- a/video_library/templates/video_web.html
+++ b/video_library/templates/video_web.html
@@ -35,7 +35,8 @@
 						{% if show_search %}
 							<div class="page-search-block">
 							{% block search %}
-								{% include 'video_library/templates/includes/video_search_box.html' %}
+								{% include
+									 'video_library/templates/includes/video_search_box.html' %}
 							{% endblock %}
 							</div>
 						{% endif %}
