jatin changes for search

--- a/video_library/templates/generators/video_category.html
+++ b/video_library/templates/generators/video_category.html
@@ -8,6 +8,19 @@
         {% include "video_library/templates/generators/video_category.css" %}
         {% include "video_library/templates/generators/owl.carousel.css" %}
         {% include "video_library/templates/generators/owl.theme.css" %}
+		
+		.item-search .item-search-input {
+			position: relative;
+			outline: none;
+			border: none;
+			margin-right: 5px;
+			padding: 7px;
+			padding-left: 0px;
+			width: 100%;
+		}
+		.item-search {
+			border-bottom: 1px solid #d1d8dd;
+		 }
 	</style>
 {% endblock %}
 
