removed exclusive word

--- a/video_library/templates/generators/video_category.html
+++ b/video_library/templates/generators/video_category.html
@@ -26,7 +26,7 @@
 
 {% block page_content %}
 <div class="container">
-<h4 class="title"> <img src="/assets/video_library/image/nounlesson_717537.png" style="max-width:50px;" /> {{title}} {{ _("Video Library") }}  <span class="pull-right sml"><img src="/assets/video_library/image/tag_938952.png" style="max-width:40px;" /> exclusive #{{total_video_count}} videos</span></h4>
+<h4 class="title"> <img src="/assets/video_library/image/nounlesson_717537.png" style="max-width:50px;" /> {{title}} {{ _("Video Library") }}  <span class="pull-right sml"><img src="/assets/video_library/image/tag_938952.png" style="max-width:40px;" /> #{{total_video_count}} videos</span></h4>
 
 
 {% if featured_video_data %}
